# mcp-course

./: README.md  notes.txt  pyproject.toml
src/: __init__.py  __main__.py
src/clients/: client.py
src/servers/: __init__.py  crypto.py  local.py  propt.py  resources.py  screenshot.py  weather.py
