[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-course"
version = "0.1.0"
description = "Test MCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.14.0",
    "fastmcp>=0.1.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
]

[project.scripts]
mcp-server = "src.__main__:main"

[tool.setuptools]
packages = ["src", "src.servers"]

[tool.setuptools.package-dir]
"" = "."